# libunistdcpp

./: CMakeLists.txt  README.md
doc/: Design.md  Motivation.md  References.md  Style.md
include/unistd/: asprintf.h  env.h  err.h  host.h  pipe.h  sysname.h  unistd.h
src/: env.cpp  err.cpp  host.cpp  pipe.cpp  sysname.cpp
